Redirect stderr to a file instead of a reader otherwise hangs on shutdown.